[package]
name = "kripton"
version = "0.1.0"
authors = ["yuliu2016 <22801773+yuliu2016@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
rand = "0.7.0"
log = "0.4.8"
env_logger = "0.6.2"
